--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
         "architecture":         "Full Yolo",
         "input_size":           416,
         "anchors":              [0.57273, 0.677385, 1.87446, 2.06253, 3.33843, 5.47434, 7.88282, 3.52778, 9.77052, 9.16828],
-        "max_box_per_image":    10,        
-        "labels":               ["raccoon"]
+        "max_box_per_image":    50,        
+        "labels":               ["license_plate"]
     },
 
     "train": {
@@ -12,8 +12,8 @@
         "train_annot_folder":   "/home/andy/github/raccoon_dataset/annotations/",     
           
         "train_times":          10,
-        "pretrained_weights":   "full_yolo_raccoon.h5",
-        "batch_size":           16,
+        "pretrained_weights":   "full_yolo_license_plate.h5",
+        "batch_size":           1,
         "learning_rate":        1e-4,
         "nb_epoch":             50,
         "warmup_epochs":        3,
@@ -23,7 +23,7 @@
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "full_yolo_raccoon.h5",
+        "saved_weights_name":   "full_yolo_license_plate.h5",
         "debug":                true
     },
 
